# arxiv_page

./: README.md  pyproject.toml
arxiv_page/: __main__.py  download.py  fetch_results.py
data/: results_2024-07-21.jsonl
