[tool.poetry]
name = "arxiv-page"
version = "0.1.0"
description = ""
authors = ["Ambuj Pawar <ambuj.pawar95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^2.1.3"
click = "^8.1.7"
srsly = "^2.4.8"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
